--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ platforms = OS Independent
 python_requires = >=3.6
 install_requires =
     click
+    colorama
     h5py
     scikit-learn
 packages = find:
